--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <nav>
                     <span class="nav-current-page">RFP Analyzer</span>
-                    <a href="foia-analysis.html" class="nav-link">FOIA Analyzer</a>
+                    <a href="foia-analysis.html" class="nav-link">FOIA Analyzer</a> 
                 </nav>
                 <div class="settings-icon-container">
                     <button id="open-prompt-settings-modal-button" class="action-icon" title="Edit AI Prompts">
@@ -50,7 +50,7 @@
         <main>
             <section id="rfp-analyzer-main-content" class="container content-card">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1.5rem;">
-                    <h2 class="history-title">History</h2>
+                    <h2 class="history-title">History</h2> 
                     <button id="open-new-rfp-modal-button" class="btn btn-primary">New RFP Analysis</button>
                 </div>
 
@@ -80,14 +80,12 @@
             <section id="view-saved-rfp-details-section" style="display: none;">
                 <div class="view-rfp-modal-content content-card container">
                     <div style="display: flex; justify-content: space-between; align-items: center;">
-                        <h2 id="view-rfp-main-title-heading">RFP Details</h2>
-                        <!-- Action button added here -->
+                        <h2 id="view-rfp-main-title-heading" class="view-modal-main-title">RFP Details</h2>
                         <div class="view-modal-actions-dropdown-container">
                             <button id="view-rfp-modal-action-trigger" class="view-modal-actions-dropdown-trigger action-icon" title="More actions">
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div id="view-rfp-modal-actions-menu" class="actions-dropdown-menu view-modal-actions-dropdown-menu">
-                                <!-- Dropdown items will be populated by JavaScript -->
                             </div>
                         </div>
                         <button id="close-view-rfp-details-button" class="btn btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.9rem;">Close Details</button>
@@ -106,46 +104,57 @@
                         </div>
 
                         <div id="view-summary-tab" class="tab-content" style="display: block;">
-                            <h3>RFP Summary:</h3>
-                            <div id="view-summary-result-content"></div>
+                            <div id="view-summary-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                            </div>
                         </div>
                         <div id="view-questions-tab" class="tab-content">
-                            <h3>Generated Clarification Questions:</h3>
-                            <div id="view-questions-result-content"></div>
+                             <div id="view-questions-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                             </div>
                         </div>
                         <div id="view-deadlines-tab" class="tab-content">
-                            <h3>Key Deadlines & Submission Format:</h3>
+                            <!-- This div will contain the structure for both Deadlines and Submission Format -->
                             <div id="view-deadlines-result-content">
-                                </div>
+                                <!-- JS (clearTabContent) will create sub-divs here for deadlines and submission format -->
+                                <!-- Then formatAndDisplayContentWithPrompt will populate those sub-divs -->
+                            </div>
                         </div>
                         <div id="view-requirements-tab" class="tab-content">
-                            <h3>Requirements:</h3>
-                            <div id="view-requirements-result-content"></div>
+                            <div id="view-requirements-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                            </div>
                         </div>
                         <div id="view-stakeholders-tab" class="tab-content">
-                            <h3>Mentioned Stakeholders:</h3>
-                            <div id="view-stakeholders-result-content"></div>
+                            <div id="view-stakeholders-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                            </div>
                         </div>
                         <div id="view-risks-tab" class="tab-content">
-                            <h3>Potential Risks/Red Flags:</h3>
-                            <div id="view-risks-result-content"></div>
+                            <div id="view-risks-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                            </div>
                         </div>
                         <div id="view-registration-tab" class="tab-content">
-                            <h3>Registration Details:</h3>
-                            <div id="view-registration-result-content"></div>
+                            <div id="view-registration-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                            </div>
                         </div>
                         <div id="view-licenses-tab" class="tab-content">
-                            <h3>Licenses & Certifications:</h3>
-                            <div id="view-licenses-result-content"></div>
+                            <div id="view-licenses-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                            </div>
                         </div>
                         <div id="view-budget-tab" class="tab-content">
-                            <h3>Budget Information:</h3>
-                            <div id="view-budget-result-content"></div>
+                            <div id="view-budget-result-content">
+                                <!-- JS will inject prompt editor & content here -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
 
+            <!-- New RFP Modal (structure for its tabs also needs to allow for prompt editor if desired for new analysis) -->
             <div id="new-rfp-modal" class="modal-overlay" style="display: none;">
                 <div class="modal-content">
                     <span class="modal-close-button" id="modal-close-button">&times;</span>
@@ -202,16 +211,35 @@
                             <button class="tab-link" onclick="openModalTab(event, 'modal-licenses-tab')">Licenses</button>
                             <button class="tab-link" onclick="openModalTab(event, 'modal-budget-tab')">Budget</button>
                         </div>
-                        <div id="modal-summary-tab" class="tab-content" style="display: block;"><div id="modal-summary-result-content"></div></div>
-                        <div id="modal-questions-tab" class="tab-content"><div id="modal-questions-result-content"></div></div>
-                        <div id="modal-deadlines-tab" class="tab-content">
+                        <div id="modal-summary-tab" class="tab-content" style="display: block;">
+                            <div id="modal-summary-result-content">
+                                <!-- JS will inject prompt editor & content here if re-analysis is enabled for new modal -->
                             </div>
-                        <div id="modal-requirements-tab" class="tab-content"><div id="modal-requirements-result-content"></div></div>
-                        <div id="modal-stakeholders-tab" class="tab-content"><div id="modal-stakeholders-result-content"></div></div>
-                        <div id="modal-risks-tab" class="tab-content"><div id="modal-risks-result-content"></div></div>
-                        <div id="modal-registration-tab" class="tab-content"><div id="modal-registration-result-content"></div></div>
-                        <div id="modal-licenses-tab" class="tab-content"><div id="modal-licenses-result-content"></div></div>
-                        <div id="modal-budget-tab" class="tab-content"><div id="modal-budget-result-content"></div></div>
+                        </div>
+                        <div id="modal-questions-tab" class="tab-content">
+                            <div id="modal-questions-result-content"></div>
+                        </div>
+                        <div id="modal-deadlines-tab" class="tab-content">
+                             <!-- JS (clearTabContent) will create sub-divs here -->
+                        </div>
+                        <div id="modal-requirements-tab" class="tab-content">
+                            <div id="modal-requirements-result-content"></div>
+                        </div>
+                        <div id="modal-stakeholders-tab" class="tab-content">
+                            <div id="modal-stakeholders-result-content"></div>
+                        </div>
+                        <div id="modal-risks-tab" class="tab-content">
+                            <div id="modal-risks-result-content"></div>
+                        </div>
+                        <div id="modal-registration-tab" class="tab-content">
+                            <div id="modal-registration-result-content"></div>
+                        </div>
+                        <div id="modal-licenses-tab" class="tab-content">
+                            <div id="modal-licenses-result-content"></div>
+                        </div>
+                        <div id="modal-budget-tab" class="tab-content">
+                            <div id="modal-budget-result-content"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -350,7 +378,8 @@
                 <p>&copy; <span id="current-year-rfp"></span> Cendien. All rights reserved. | Dallas IT Consulting & Managed Services</p>
             </div>
         </footer>
-    </div> <script type="module" src="rfp-script.js"></script>
+    </div> 
+    <script type="module" src="rfp-script.js"></script>
     <script>
         function openTabGeneric(evt, tabName, containerElementId) {
             var i, tabcontent, tablinks;
