--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <div id="auth-modal-overlay" class="auth-modal-overlay">
         <div class="auth-modal-content">
-            <h2>RFP Analyzer Login(beta)</h2>
+            <h2>RFP Analyzer Login</h2>
             <form id="auth-form">
                 <div class="form-group">
                     <label for="auth-username">Username:</label>
