--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div id="auth-modal-overlay" class="auth-modal-overlay">
+    <div id="auth-modal-overlay" class="auth-modal-overlay active">
         <div class="auth-modal-content">
             <h2>RFP Analyzer Login</h2>
             <form id="auth-form">
